[gd_scene load_steps=4 format=3 uid="uid://g7c5iqp4xy6m"]

[ext_resource type="Script" path="res://Scene_Switcher/Menu/save_score_player.gd" id="1_qwytx"]
[ext_resource type="Theme" uid="uid://bae841tqt1b6d" path="res://Scene_Switcher/alligator_theme.tres" id="1_uu2ja"]
[ext_resource type="PackedScene" uid="uid://dxxbhcjgkxilc" path="res://Scene_Switcher/mouse_sound.tscn" id="3_i8vx4"]

[node name="save_score_player" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1_qwytx")

[node name="cont_bg" type="MarginContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="cont_bg"]
layout_mode = 2
color = Color(0.366595, 0.366595, 0.366595, 0.376471)

[node name="cont" type="MarginContainer" parent="."]
custom_minimum_size = Vector2(672, 0)
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_uu2ja")

[node name="lines" type="VBoxContainer" parent="cont"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="Game_Over_Label" type="Label" parent="cont/lines"]
layout_mode = 2
theme_override_font_sizes/font_size = 200
text = "GAME OVER"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Title" type="Label" parent="cont/lines"]
layout_mode = 2
text = "Enter  your  name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="player_name" type="LineEdit" parent="cont/lines"]
layout_mode = 2

[node name="cont_btn" type="MarginContainer" parent="cont/lines"]
layout_mode = 2
theme_override_constants/margin_left = 128
theme_override_constants/margin_right = 128

[node name="Button" type="Button" parent="cont/lines/cont_btn"]
layout_mode = 2
text = "Save"

[node name="mouse_sound" parent="." instance=ExtResource("3_i8vx4")]

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="cont/lines/cont_btn/Button" to="." method="_on_button_pressed"]
